<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="body1">one</string>
	<string name="body2">two</string>
	<string-array name="labelMenu">
		<item >Tab 1</item>
		<item >Tab 2</item>
	</string-array>
	<string name="eula">"e-Arogyam" END USER LICENSE AGREEMENT - 
THIS IS AN AGREEMENT MADE BY AND BETWEEN YOU AND e-Arogyam CONCERNING YOUR USE OF THE e-Arogyam  APPLICATION (THE “SOFTWARE”). 
PLEASE READ THIS AGREEMENT CAREFULLY. BY USING THE SOFTWARE, YOU ACKNOWLEDGE THAT YOU HAVE READ AND UNDERSTOOD THIS AGREEMENT, 
THE TERMS OF SERVICE AND THE PRIVACY POLICY (EACH INCORPORATED HEREIN BY REFERENCE), AND THAT YOU AGREE TO BE BOUND BY THEM. 
IF YOU DO NOT AGREE, YOU MAY NOT USE THE SOFTWARE, AND YOU MUST UNINSTALL THE SOFTWARE FROM ANY DEVICE OWNED OR CONTROLLED BY YOU.

License. Subject to your compliance in all material respects with the terms and conditions of this Agreement and the Usage Rules set forth in the App 
Store Terms of Service, e-Arogyam grants you a restricted, non-exclusive, non-transferable, revocable license to install and use the 
Software, in machine executable object code form only, on a single iOS personal mobile device that you own and control, solely for personal,
 non-commercial purposes.
Restrictions. You may not use, copy, print, modify, adapt, create derivative works from, market, deliver, rent, lease, sublicense,
 make, have made, assign, pledge, transfer, sell, offer to sell, import, reproduce, distribute, publicly perform, publicly display 
 or otherwise grant rights to the Software, or any copy thereof, in whole or in part, except as expressly permitted under this Agreement. 
 You may not reverse engineer, disassemble, decompile or translate the Software, or otherwise attempt to derive the source code, structural
 framework or the data records of the Software, or authorize any third party to do any of the foregoing. You may not loan, resell or distribute 
 the Software, or any part thereof, in any way.</string>
 
<string name="updates"></string>

    <string name="app_name">e-Arogyam</string>
   <string name="app_nameHindi">ई-आरोग्यम</string>
   <string name="passkeyDetail">प्रवेश जानकारी</string>
   <string name="okLogin">ठीक</string> 
    <string name="main_menu">Main Menu</string>
    <string name="add_details">Add Details</string>
    <string name="verified_list">Verified List</string>
    <string name="verify">Verify</string>
    
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="Menu">Menu</string>  
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_num">Phone</string>
    <string name="date_of_birth">Birth Date</string>
    <string name="choose_language">Choose Default Language</string>
    <string name="verification">Verification</string>
    <string name="english">English</string>
    <string name="Hindi">हिंदी</string>
    <string name="language">Language</string>
    <string name="enter_name">Enter Name Here</string>
    <string name="enter_num">Enter Phone Number</string>
    <string name="enter_dob">Enter Date of Birth</string>
    <string name="enter_age">Enter Age</string>
     <string name="SearchFilter">Search Filter</string>
        <string name="OTP">CODE</string>
        	    <string name="Pending">Pending</string> 
	    <string name="Verified">Verified</string>
	     	 <string name="Select">Select</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_update_delete">Update and Delete</string>
        <string name="title_activity_Passkey">Log In</string>
 <string name="Processing">Processing..</string>
     	 <string name="Delete">Delete</string>
     	  <string name="PleaseWait">Please Wait..</string>
     	   <string name="Success">Success!</string>
     	    <string name="Failed">Failed!</string>
     	     <string name="Cannotbeadded">Cannot be added!</string>
     	        <string name="FullDetail"> Please provide full detail then retry!</string>
     	        <string name="Warning">Warning!</string>
     	      <string name="AddedSuccess">Added Successfully!</string>
     	      <string name="DeletedSuccess">Deleted Successfully!</string>
     	       <string name="UpdatedSuccess">Updated Successfully!</string>
     	   	 <string name="VerifiedSuccess">Verified Successfully!</string>
     	   	 
     	   	      <string name="NoNetwork">No Network Available!</string>
     	   	      <string name="Information">Information</string>
     	   	    <string name="InformationHindi">सूचना !</string>
     	   	    
     	   	     <string name="wrongPasskeyHindi">पासकी दर्ज किया गलत है. पुन: प्रयास करें.</string>
     	   	    
     	   	      <string name="wrongPasskey">Passkey entered is wrong. Please try again.</string>
     	   	      <string name="mobileNoUpdated">Mobile No updated successfully</string>
     	   	      <string name="FillMandatory">Please enter all details!</string>
  
     	   	       <string name="Records">records</string>
     	   	       <string name="ConfirmationAdd">Are you sure you want to add ?</string>
     	   	      <string name="ConfirmationUpdate">Are you sure you want to update ?</string>
     	   	      <string name="ConfirmationVerifiy">Are you sure you want to verify ?</string>
     	   	      <string name="ConfirmationDelete">Are you sure you want to delete ?</string>
     	   	       <string name="BenificiaryDonotExist">Record does not exist.</string>
     	   	      <string name="Ok">Ok</string>
     	   	       
     	   	       <string name="Yes">Yes</string>
     	   	       <string name="No">No</string>
     	   	       
  
     	   	         <string name="update">Update</string>
  <string name="Save">Save</string>
   	 <string name="hwsetting">Health Worker Settings</string>
   	  <string name="NoSearchResult">No Item exist !</string>
  
  <string name="url_add_beneficiary">http://promdhost.in/vaccination/beneficiary/</string>
<string name="url_get_beneficiary">http://promdhost.in/vaccination/beneficiary</string>
  
    <string-array name="languages">
        <item>Select</item>
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    
    <string-array name="menu_items">
        <item>Menu</item>
        <item>Add Detail</item>
        <item>Search</item>
        <item>Verify</item>
        <item>Setting</item>
    </string-array>
    

    <!-- Names -->


    <!-- Pictures -->
    <array name="profile_pics">
        <item>@drawable/ic_action_user</item>
    </array>

    <!-- Pictures -->
    <array name="search_filter">
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_call</item>
        <item>@drawable/ic_action_select_all</item>
        
    </array>

    <!-- Status -->
    <string-array name="search_hint">
        <item>Search By Name</item>
        <item>Search By Phone No</item>
        <item>Search By Date of Birth</item>

    </string-array>

    <!-- contact type -->
    <string-array name="code">
        <item>Mobile</item>
        <item>Work</item>
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Mobile</item>
        <item>Mobile</item>
        <item>Mobile</item>
    </string-array>

    <string name="title_activity_verification">VerificationActivity</string>

    <color name="add_details_background">#006986</color>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>

</resources>
