<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/main_menu_background">

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set_phone"
        android:layout_below="@+id/set_phone"
        android:layout_marginTop="44dp"
        android:text="@string/language"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   
    <EditText
        android:id="@+id/et_phoneSettingId"
     android:layout_width="wrap_content"
              android:layout_height="31dp"
         
          android:paddingLeft="2sp"
           android:background="@color/white_color"
             android:ems="12"
        android:layout_above="@+id/language"
        android:layout_marginRight="30dp"
        android:layout_alignLeft="@+id/spinner1"
       
        android:layout_alignParentRight="true"
       
        android:maxLength="10"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/language"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/language"
        android:entries="@array/languages" 
        android:prompt="@string/choose_language"/>

     <TextView
         android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:text="@string/hwsetting"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="25sp" />

     <TextView
         android:id="@+id/set_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/settings"
         android:layout_below="@+id/settings"
         android:layout_marginTop="60dp"
         android:text="@string/phone_num"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <Button
         android:id="@+id/btn_hwSubmitId"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:textSize="25sp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:layout_alignBaseline="@+id/menusetting_button_id"
         android:layout_alignBottom="@+id/menusetting_button_id"
         android:layout_marginLeft="34dp"
         android:layout_toRightOf="@+id/menusetting_button_id"
         android:background="@drawable/button_selector"
         android:gravity="center"
         android:text="@string/submit"
         android:textColor="@color/white_color"
 />

     <Button
         android:id="@+id/menusetting_button_id"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:textSize="25sp" 
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         
         android:layout_alignRight="@+id/language"
         android:layout_below="@+id/spinner1"
         android:layout_marginTop="48dp"
         android:background="@drawable/button_selector"
         android:layout_gravity="center"
         android:text="@string/Menu"
         android:textColor="@color/white_color"
         />

</RelativeLayout>
